methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:4: error: ambiguous reference to overloaded definition,
both method forward in class MethodsArgs of type (i: Int)Unit
and  method forward in class AbstractBuggle of type ()Unit
match expected type ?
    if (forward==true) {
        ^