methods.args.MethodsArgs.scala.code
def move(stepCount: Int,forward2:Boolean)= {
  for (i<- 1 to stepCount){
    if (forward==true) {
      forward();
    } else {
      backward();
    }
  }
}